--- a/Sample Razor Pages Application/Pages/index.cshtml
+++ b/Sample Razor Pages Application/Pages/index.cshtml
@@ -27,7 +27,19 @@
                 </ul>
                 <ul class="nav nav-pills">
                     <li>
-                        <a href="/Account/Login">Login</a>
+                        @if (!User.Identity.IsAuthenticated)
+                        {
+                            <a href="/Account/Login">Login</a>
+                        }
+                        else
+                        {
+                            <form method="post">
+                                <div class="input-group">
+                                    <span>@User.Identity.IsAuthenticated</span>
+                                    <button type="submit" class="btn btn-link">Logout</button>
+                                </div>
+                            </form>
+                        }
                     </li>
                 </ul>
             </nav>
@@ -40,20 +52,21 @@
     <div class="container">
 
         <div class="row recipes">
-
-            <div class="recipe col-md-4">
-                <img class="img img-thumbnail" src="http://topsyturvycakedesign.com/img/birthday-cake-for-fido.jpg" />
-                <h3><a href="/Recipe">Birthday Cake for Fido</a></h3>
-                <p>Treat your puppy to a delicious birthday treat!</p>
-            </div>
-
+            @foreach (var recipe in new[] { "Stake Studio Ki Stake", "Express Shawarma Ka Platter", "Fine Ka Burger" })
+            {
+                <div class="recipe col-md-4">
+                    <img class="img img-thumbnail" src="http://topsyturvycakedesign.com/img/birthday-cake-for-fido.jpg" />
+                    <h3><a href="/Recipe">@recipe</a></h3>
+                    <p>Treat your puppy to a delicious birthday treat!</p>
+                </div>
+            }
         </div>
 
     </div>
 
     <footer>
         <div class="text-center">
-            <span class="text-muted">Last Rendered:  </span>
+            <span class="text-muted">Last Rendered:  @DateTime.Now</span>
         </div>
     </footer>
 </body>
