Recipe Page Dynamic Content Setup From Database

--- a/Sample Razor Pages Application/Pages/Recipe.cshtml
+++ b/Sample Razor Pages Application/Pages/Recipe.cshtml
@@ -1,13 +1,18 @@
 ﻿@page
 @model Sample_Razor_Pages_Application.Pages.RecipeModel
+@using Sample_Razor_Pages_Application.Models
 @{
     ViewData["Title"] = "Recipe";
+    var id = 1;
+    var recipesService = new RecipesService();
+    var recipe = await recipesService.FindAsync(id);
 }
 
 <!DOCTYPE html>
 <html>
 <head>
     <title>Topsy Turvy Cake Design</title>
+    <link rel="stylesheet" href="~/site.css" />
 </head>
 <body>
 
@@ -32,7 +37,7 @@
             </nav>
         </div>
         <div class="row">
-            <h2 class="title">My Favorite Recipes</h2>
+            <h2 class="title">@recipe.Name</h2>
         </div>
     </header>
 
@@ -45,7 +50,7 @@
                 <div class="col-md-12">
 
                     <span class="description">
-                        [ DESCRIPTION ]
+                        @recipe.Description
                     </span>
 
                     <hr />
@@ -54,21 +59,27 @@
                 <div class="ingredients col-md-4">
                     <h4>Ingredients</h4>
                     <ul>
-                        <li>[INGREDIENT]</li>
+                        @foreach (var ingredient in @recipe.IngredientsList)
+                        {
+                            <li>@ingredient</li>
+                        }
                     </ul>
                 </div>
 
                 <div class="directions col-md-8">
                     <h4>Directions</h4>
                     <ol>
-                        <li>[STEP]</li>
+                        @foreach (var direction in @recipe.DirectionsList)
+                        {
+                            <li>@direction</li>
+                        }
                     </ol>
                 </div>
 
             </div>
 
             <div class="col-md-4 text-right">
-                <img class="img img-thumbnail" src="[IMAGE]" />
+                <img class="img img-thumbnail" src="@recipe.GetInlineImageSrc()" />
             </div>
 
         </div>
@@ -78,7 +89,7 @@
 
     <footer>
         <div class="text-center">
-            <span class="text-muted">Last Rendered:  </span>
+            <span class="text-muted">Last Rendered:  @DateTime.Now</span>
         </div>
     </footer>
 </body>
