--- a/Sample Razor Pages Application/Pages/index.cshtml
+++ b/Sample Razor Pages Application/Pages/index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model Sample_Razor_Pages_Application.Pages.indeModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Sample_Razor_Pages_Application.Models
 @{
     ViewData["Title"] = "inde";
@@ -60,7 +61,7 @@
             {
                 <div class="recipe col-md-4">
                     <img class="img img-thumbnail" src="@recipe.GetInlineImageSrc()" />
-                    <h3><a href="/Recipe">@recipe.Name</a></h3>
+                    <h3><a asp-page="/Recipe" asp-route-id="@recipe.Id">@recipe.Name</a></h3>
                     <p>@recipe.Description</p>
                 </div>
             }
