--- a/Sample Razor Pages Application/Pages/Recipe.cshtml
+++ b/Sample Razor Pages Application/Pages/Recipe.cshtml
@@ -3,97 +3,49 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Sample_Razor_Pages_Application.Models
 @{
+    Layout = "_Layout";
     ViewData["Title"] = "Recipe";
     var id =long.Parse((string)RouteData.Values["id"]);
     var recipesService = new RecipesService();
     var recipe = await recipesService.FindAsync(id);
 }
+<div class="row recipe">
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Topsy Turvy Cake Design</title>
-    <link rel="stylesheet" href="~/site.css" />
-</head>
-<body>
+    <div class="col-md-8">
 
-    <header class="container site-header">
-        <div class="row">
-            <h1 class="main-logo"><a href="/">Topsy Turvy Cake Design</a></h1>
-        </div>
-        <div class="row">
-            <nav class="navbar">
-                <ul class="nav nav-pills">
-                    <li><a href="/About">About</a></li>
-                    <li><a href="/Blog">Blog</a></li>
-                    <li><a class="active" href="/">Recipes</a></li>
-                    <li><a href="/Portfolio">Portfolio</a></li>
-                    <li><a href="/Contact">Contact</a></li>
-                </ul>
-                <ul class="nav nav-pills">
-                    <li>
-                        <a href="/Account/Login">Login</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="row">
-            <h2 class="title">@recipe.Name</h2>
-        </div>
-    </header>
+        <div class="col-md-12">
 
-    <div class="container">
+            <span class="description">
+                @recipe.Description
+            </span>
 
-        <div class="row recipe">
-
-            <div class="col-md-8">
-
-                <div class="col-md-12">
-
-                    <span class="description">
-                        @recipe.Description
-                    </span>
-
-                    <hr />
-                </div>
-
-                <div class="ingredients col-md-4">
-                    <h4>Ingredients</h4>
-                    <ul>
-                        @foreach (var ingredient in @recipe.IngredientsList)
-                        {
-                            <li>@ingredient</li>
-                        }
-                    </ul>
-                </div>
-
-                <div class="directions col-md-8">
-                    <h4>Directions</h4>
-                    <ol>
-                        @foreach (var direction in @recipe.DirectionsList)
-                        {
-                            <li>@direction</li>
-                        }
-                    </ol>
-                </div>
-
-            </div>
-
-            <div class="col-md-4 text-right">
-                <img class="img img-thumbnail" src="@recipe.GetInlineImageSrc()" />
-            </div>
-
+            <hr />
         </div>
 
+        <div class="ingredients col-md-4">
+            <h4>Ingredients</h4>
+            <ul>
+                @foreach (var ingredient in @recipe.IngredientsList)
+                {
+                    <li>@ingredient</li>
+                }
+            </ul>
+        </div>
+
+        <div class="directions col-md-8">
+            <h4>Directions</h4>
+            <ol>
+                @foreach (var direction in @recipe.DirectionsList)
+                {
+                    <li>@direction</li>
+                }
+            </ol>
+        </div>
 
     </div>
 
-    <footer>
-        <div class="text-center">
-            <span class="text-muted">Last Rendered:  @DateTime.Now</span>
-        </div>
-    </footer>
-</body>
-</html>
+    <div class="col-md-4 text-right">
+        <img class="img img-thumbnail" src="@recipe.GetInlineImageSrc()" />
+    </div>
 
-
+</div>
