Title Section For Pages

--- a/Sample Razor Pages Application/Pages/_Layout.cshtml
+++ b/Sample Razor Pages Application/Pages/_Layout.cshtml
@@ -39,8 +39,16 @@
             </nav>
         </div>
         <div class="row">
-            <h2 class="title">My Favorite Recipes</h2>
+            @if (IsSectionDefined("Title"))
+            {
+                @RenderSection("Title", required: false)
+            }
+            else
+            {
+                <h2 class="title">The Best Cakes Around</h2>
+            }
         </div>
+
     </header>
 
     <div class="container">
