--- a/Sample Razor Pages Application/Pages/_Layout.cshtml
+++ b/Sample Razor Pages Application/Pages/_Layout.cshtml
@@ -1,8 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Topsy Turvy Cake Design</title>
-    <link rel="stylesheet" href="~/site.css" />
+    
+        @if((string)ViewData["Title"] == "inde")
+        {
+            <title>Best Place For Recipies - Recipes Hub</title>
+        }
+        else
+        {
+            <title>@ViewData["Title"] - Recipes Hub</title>
+        }
+        <link rel="stylesheet" href="~/site.css" />
 </head>
 <body>
 
@@ -45,7 +53,7 @@
             }
             else
             {
-                <h2 class="title">The Best Cakes Around</h2>
+                <h2 class="title">@ViewData["Title"]</h2>
             }
         </div>
 
