User AUthentication Using Cookie Authenticator

--- a/Sample Razor Pages Application/Pages/Admin/AddEditRecipe.cshtml
+++ b/Sample Razor Pages Application/Pages/Admin/AddEditRecipe.cshtml
@@ -3,45 +3,52 @@
 @{
     ViewData["Title"] = Model.isNewRecipe ? "New Recipe" : "Edit Recipe";
 }
+@if (!ModelState.IsValid)
+{
+    <div class="col-lg-offset-2 col-md-10 text-danger">
+        <h3>Validation Errors</h3>
+        <div asp-validation-summary="All" class="text-danger"></div>
+    </div>
+}
 
-    <form method="post" class="form-horizontal" enctype="multipart/form-data">
-        <div class="form-group">
-            <label asp-for="recipe.Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="recipe.Name" class="form-control" />
-            </div>
+<form method="post" class="form-horizontal" enctype="multipart/form-data">
+    <div class="form-group">
+        <label asp-for="recipe.Name" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="recipe.Name" class="form-control" />
         </div>
-        <div class="form-group">
-            <label asp-for="recipe.Description" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <textarea rows="3" asp-for="recipe.Description" class="form-control"></textarea>
-            </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="recipe.Description" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <textarea rows="3" asp-for="recipe.Description" class="form-control"></textarea>
         </div>
-        <div class="form-group">
-            <label asp-for="recipe.Ingredients" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <textarea rows="3" asp-for="recipe.Ingredients" class="form-control"></textarea>
-            </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="recipe.Ingredients" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <textarea rows="3" asp-for="recipe.Ingredients" class="form-control"></textarea>
         </div>
-        <div class="form-group">
-            <label asp-for="recipe.Directions" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <textarea rows="3" asp-for="recipe.Directions" class="form-control"></textarea>
-            </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="recipe.Directions" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <textarea rows="3" asp-for="recipe.Directions" class="form-control"></textarea>
         </div>
-        <div class="form-group">
-            <label asp-for="Image" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input type="file" asp-for="Image"/>
-            </div>
+    </div>
+    <div class="form-group">
+        <label asp-for="Image" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input type="file" asp-for="Image" />
         </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-primary">Save</button>
-                @if (!Model.isNewRecipe)
-                {
-                    <button type="submit" asp-page-handler="Delete" class="btn btn-primary">Delete</button>
-                }
-            </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <button type="submit" class="btn btn-primary">Save</button>
+            @if (!Model.isNewRecipe)
+            {
+                <button type="submit" asp-page-handler="Delete" class="btn btn-danger">Delete</button>
+            }
         </div>
-    </form>
+    </div>
+</form>
