--- a/Sample Razor Pages Application/Pages/Recipe.cshtml
+++ b/Sample Razor Pages Application/Pages/Recipe.cshtml
@@ -7,6 +7,7 @@
     var recipe = await RecipesService.FindAsync(id);
 
     ViewData["Title"] = recipe.Name;
+    ViewData["Id"] = recipe.Id;
 }
 <div class="row recipe">
 
