--- a/Sample Razor Pages Application/Pages/index.cshtml
+++ b/Sample Razor Pages Application/Pages/index.cshtml
@@ -6,19 +6,22 @@
     var recipesService = new RecipesService();
     var recipes = await RecipesService.GetAllAsync();
 }
-<div class="row recipes">
-    @section Title{
-        <h2 class="Title">My Favourite Recipes</h2>
-        <a asp-page="/Admin/AddEditRecipe" class="add-recipe btn btn-primary">Add Recipe</a>
-    }
+    <div class="row recipes">
+        @section Title{
+            <h2 class="Title">My Favourite Recipes</h2>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a asp-page="/Admin/AddEditRecipe" class="add-recipe btn btn-primary">Add Recipe</a>
+            }
+        }
 
-    @foreach (var recipe in recipes)
-    {
-        <div class="recipe col-md-4">
-            <img class="img img-thumbnail" src="@recipe.GetInlineImageSrc()" />
-            <h3><a asp-page="/Recipe" asp-route-id="@recipe.Id">@recipe.Name</a></h3>
-            <p>@recipe.Description</p>
-        </div>
-    }
-</div>
+        @foreach (var recipe in recipes)
+        {
+            <div class="recipe col-md-4">
+                <img class="img img-thumbnail" src="@recipe.GetInlineImageSrc()" />
+                <h3><a asp-page="/Recipe" asp-route-id="@recipe.Id">@recipe.Name</a></h3>
+                <p>@recipe.Description</p>
+            </div>
+        }
+    </div>
 
