--- a/Sample Razor Pages Application/Pages/_Layout.cshtml
+++ b/Sample Razor Pages Application/Pages/_Layout.cshtml
@@ -16,7 +16,9 @@
 
     <header class="container site-header">
         <div class="row">
-            <h1 class="main-logo"><a href="/">Topsy Turvy Cake Design</a></h1>
+            <img src="https://lh3.googleusercontent.com/proxy/tZlIim26d_d3ZbmWKvkuOu-cWJm7oPa_qhFIamJ7Lxyol4uf4N43WESQcXeU_6KW9zbrsz1vrhCJNKO00500dPzCs4LvZABkRpIqIwc4LwLCg4jL7DWMiSFcGlin4Ej5otWPmTPf" style="
+    width: 20%;
+"/>
         </div>
         <div class="row">
             <nav class="navbar">
